<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="@dimen/logout"
         android:layout_marginLeft="@dimen/login_margin_wide"
         android:layout_marginRight="@dimen/login_margin_wide"
         android:orientation="horizontal">

         <TextView
             style="@style/bold_text"
             android:layout_width="@dimen/zero_dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/username"/>
         <EditText
             android:id="@+id/username"
             android:layout_width="@dimen/zero_dp"
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:hint="@string/username_hint"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="@dimen/login_margin_wide"
        android:layout_marginLeft="@dimen/login_margin_wide"
        android:layout_marginRight="@dimen/login_margin_wide"
        android:orientation="horizontal">

        <TextView
            style="@style/bold_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="@dimen/login_margin_x_wide"
        android:layout_marginLeft="@dimen/login_margin_x_wide"
        android:layout_marginRight="@dimen/login_margin_x_wide"
        android:layout_marginBottom="@dimen/login_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height"
        android:textAllCaps="true"
        android:drawableLeft="@drawable/login"
        android:drawablePadding="@dimen/button_image_padding"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/reset_password"
        android:visibility="gone"
        android:textStyle="italic"
        android:clickable="true"
        android:text="@string/reset_password"/>

</LinearLayout>