<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:background="@color/lightGray"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/big_text"
        android:gravity="center"
        android:text="@string/save_search_result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginRight="5dp"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cancel"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/button_text" />


    </LinearLayout>

</LinearLayout>