<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/lightGray"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/reset_layout_height"
        android:weightSum="3"
        android:layout_marginTop="@dimen/login_margin_wide"
        android:layout_marginLeft="@dimen/login_margin_wide"
        android:layout_marginRight="@dimen/login_margin_wide"
        android:orientation="horizontal">

        <TextView
            style="@style/bold_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_password"/>
        <EditText
            android:id="@+id/new_password"
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/price_button_margin"
        android:background="@drawable/button_background"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="@color/button_text" />

</LinearLayout>