<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logout"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/login_margin"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:visibility="gone"
        android:textColor="@color/button_text" />

    <android.support.v7.widget.CardView
        android:id="@+id/vehicle_image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
        card_view:contentPadding="@dimen/card_view_content_padding">
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/some_id_if_needed"
        layout="@layout/vehicle_row" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/vehicle_detail_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_view_content_padding"
        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
        card_view:contentPadding="@dimen/card_view_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/bold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:text="@string/vehicle_details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/bold_text"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:text="@string/body_type"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/body_type"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/bold_text"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:text="@string/display_color"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/display_color"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/bold_text"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/bold_text"
                    android:id="@+id/isFavoritedLabel"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:visibility="gone"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/isFavorited"
                    android:layout_width="@dimen/linear_layout_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:text="@string/yes"
                    android:visibility="gone"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/share_button_height"
        android:layout_marginTop="@dimen/share_button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/share"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:textAllCaps="true"
            android:drawableLeft="@drawable/contact_email"
            android:drawablePadding="@dimen/button_image_padding"
            android:text="@string/share"/>


        <Button
            android:id="@+id/contact"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:textAllCaps="true"
            android:drawableLeft="@drawable/contact_phone"
            android:drawablePadding="@dimen/button_image_padding"
            android:text="@string/contact_dealer"/>

    </LinearLayout>
</LinearLayout>
    </ScrollView>